delete e update
